--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,6 +22,10 @@ body {
   font-family: "FrutigerLTArabic", sans-serif;
 }
 
+h4 {
+  line-height: 1.5em;
+}
+
 .container,
 .container-sm,
 .container-md,
