--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -86,7 +86,7 @@ ul {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: 3rem 0;
 }
 
 .relative {
@@ -104,6 +104,7 @@ ul {
 .top-shape {
   position: absolute;
   width: 100%;
+  left: 0;
   z-index: 8;
 }
 
