--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  position: relative;
   direction: rtl;
   text-align: right;
   overflow-x: hidden;
@@ -115,7 +116,7 @@ ul {
 }
 
 .divider {
-  height: 120px;
+  height: 70px;
 }
 
 .section {
@@ -191,8 +192,20 @@ ul {
   color: #f2c916;
 }
 
-.kahhal-name h4 {
-  color: #fff !important;
+.bootom_svg,
+.top__svg {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  left: 0;
+}
+
+.bottom-svg {
+  top: 100%;
+}
+
+.top__svg {
+  bottom: 100%;
 }
 
 @media (min-width: 992px) and (max-width: 1183px) {
