--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -217,6 +217,7 @@ ul {
   transform: translateY(0) !important;
   border-radius: 50%;
   margin-top: 2rem;
+  padding: 0.7em;
 }
 
 .hooper button {
