--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24,6 +24,39 @@ body {
   font-family: "FrutigerLTArabic", sans-serif;
 }
 
+.contact .form-control::-webkit-input-placeholder {
+  color: #fff !important;
+  opacity: 1;
+}
+
+.contact .form-control:-ms-input-placeholder {
+  color: #fff !important;
+  opacity: 1;
+}
+
+.contact .form-control::-ms-input-placeholder {
+  color: #fff !important;
+  opacity: 1;
+}
+
+.contact .form-control::-moz-placeholder {
+  color: #fff !important;
+  opacity: 1;
+}
+
+.contact .form-control::placeholder {
+  color: #fff !important;
+  opacity: 1;
+}
+
+.contact .form-control:-ms-input-placeholder {
+  color: #fff !important;
+}
+
+.contact .form-control::-ms-input-placeholder {
+  color: #fff !important;
+}
+
 h4 {
   line-height: 1.5em;
 }
@@ -90,9 +123,10 @@ ul {
 }
 
 .form-control {
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 5rem;
   padding: 1.5rem 1rem;
-  border: 0;
-  border-bottom: 1px solid rgba(0, 149, 175, 0.3);
 }
 
 .custom-select {
@@ -155,8 +189,8 @@ ul {
 .action-btn {
   position: relative;
   border: 0;
-  background: #f2c916 !important;
-  color: #fff !important;
+  background: #fff !important;
+  color: #0096af !important;
   font-weight: bold;
   border-radius: 5rem;
   padding: 0.6rem 2rem;
@@ -165,30 +199,8 @@ ul {
 }
 
 .action-btn svg {
-  color: #fff;
+  color: #0096af;
   margin-left: 0.5rem;
-}
-
-.contact__sub-title h4 {
-  position: relative;
-  width: 130px;
-  margin: auto;
-}
-
-.contact__sub-title h4::before {
-  position: absolute;
-  content: "“";
-  left: 0;
-  top: 0;
-  color: #f2c916;
-}
-
-.contact__sub-title h4::after {
-  position: absolute;
-  content: "”";
-  right: 0;
-  top: 0;
-  color: #f2c916;
 }
 
 .bootom_svg,
