--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -231,6 +231,8 @@ ul {
 .hooper-next,
 .hooper-prev {
   position: static !important;
+  -webkit-transform: translateY(0) !important;
+  -ms-transform: translateY(0) !important;
   transform: translateY(0) !important;
   border-radius: 50%;
   margin-top: 2rem;
