--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -288,6 +288,39 @@ ul {
   font-size: 1.5em;
 }
 
+@-webkit-keyframes offer_animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes offer_animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-o-keyframes offer_animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes offer_animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @media (min-width: 992px) and (max-width: 1183px) {
 }
 
